--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_WORDPRESS_API_ENDPOINT=https://carolinetanto.xyz/graphql
+NEXT_PUBLIC_WORDPRESS_API_ENDPOINT=https://new.chonglap.com/graphql
