--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "@heroicons/react": "^2.1.1",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@react-three/fiber": "^8.15.19",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-three-fiber": "^6.0.13",
     "sass": "^1.71.1",
-    "swiper": "^11.0.7",
-    "swiper.js": "^1.0.0"
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.162.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
