--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.15.19",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "isomorphic-fetch": "^3.0.0",
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
