--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "react-three-fiber": "^6.0.13",
     "sass": "^1.71.1",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "wordpress-rest-api": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
