--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "14.1.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-three-fiber": "^6.0.13",
     "sass": "^1.71.1",
     "three": "^0.162.0",
